# CT-NCC-Bot

./: admins.txt  keep_alive.py  keys.json  main.py  prefixes.json  pyproject.toml  suggestions.json  training_data.json
templates/: base.html  index.html
